# appveyorExample

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.bat  conanfile.txt  hello.cpp  hello.h  sonar-project.properties
.github/: issue-branch.yml
.github/workflows/: clang-tidy.yml  createBranchFromIssue.yml  sonarcloud.yml  ubuntu.yml  windows.yml
docker/: Dockerfile
scripts/: DOCKERFILE
src/: hello.cpp
test/: CMakeLists.txt  catch2Wrapper.h  helloTester.cpp  main.cpp
test/animal/: CMakeLists.txt  animal.cpp
test/clang-errors/: CMakeLists.txt  clang-errors.cpp  clang-errors.h
test/hello/: CMakeLists.txt  helloTester.cpp
